plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'HeoJin'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// 138.0.7204.158 -> chrome version 2025.07.22
	// selenium 관련 라이브러리


	// jsoup 관련 라이브러리
	// https://jsoup.org/download
	implementation 'org.jsoup:jsoup:1.21.1'

	// https://www.selenium.dev/downloads/
	// selenium 4.34.0
	implementation 'org.seleniumhq.selenium:selenium-java:4.34.0'
	// chrome driver 드라이버 대신
	//https://bonigarcia.dev/webdrivermanager/#setup
	implementation 'io.github.bonigarcia:webdrivermanager:6.2.0'


	// mongo
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

}

tasks.named('test') {
	useJUnitPlatform()
}
